# sleep-pattern-storyboard

./: .dvcignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  Sleep Pattern Analysis.ipynb  dvc.yaml  pyproject.toml  sleep_pattern_analysis.py  streamlit_app.py
.dvc/: .gitignore
.github/workflows/: ci.yaml
app/: Home.py  __init__.py
app/components/: __init__.py  charts.py  filters.py  tables.py
app/pages/: Analyst.py  Coach.py  Trends.py  WhatIf.py
config/: settings.yaml
configs/: analytics_v2.yaml
data/raw/signals/: hrv_sample.csv  screen_time_sample.csv  steps_sample.csv  tags_sample.csv
data/raw/vendor_samples/: apple_health.csv  fitbit.csv  oura.csv
docs/: findings.md
docs/assets/: README.txt
notebooks/: Sleep Pattern Analysis.ipynb
src/sleep_analysis/: __init__.py  cli.py  config.py  schema.py  telemetry.py  training.py  transform.py
src/sleep_analysis/detect/: __init__.py  anomaly.py  change_point.py
src/sleep_analysis/features/: __init__.py  circadian.py  health_store.py
src/sleep_analysis/models/: __init__.py  artifacts.py  gbm.py  prophet.py  sarimax.py  tft.py
src/sleep_analysis/parsers/: __init__.py  apple_health.py  base.py  fitbit.py  oura.py
src/sleep_analysis/personalize/: __init__.py  baselines.py
src/sleep_analysis/privacy/: scrub.py
tests/: test_loaders.py
tests/analytics/: test_baselines.py
tests/app/: test_exports.py
tests/config/: test_settings.py
tests/privacy/: test_scrubber.py
tests/property/: test_schema_contracts.py  test_transform_rules.py
tests/signals/: test_feature_fusion.py
(+7 files in other folders)
